@@ -2,15 +2,17 @@ package pro.verron.officestamper.core;
 
 import jakarta.xml.bind.JAXBElement;
 import org.docx4j.wml.*;
-import pro.verron.officestamper.api.Paragraph;
-import pro.verron.officestamper.api.Placeholder;
+import pro.verron.officestamper.api.*;
+import pro.verron.officestamper.utils.WmlFactory;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Objects;
+import java.math.BigInteger;
+import java.util.*;
+import java.util.function.Consumer;
 
+import static java.util.Arrays.stream;
 import static java.util.stream.Collectors.joining;
+import static pro.verron.officestamper.api.OfficeStamperException.throwing;
+import static pro.verron.officestamper.utils.WmlUtils.getFirstParentWithClass;
 
 /**
  * <p>A "Run" defines a region of text within a docx document with a common set of properties. Word processors are
@@ -18,8 +20,8 @@ import static java.util.stream.Collectors.joining;
  * runs a word or a string of words is spread.</p>
  * <p>This class aggregates multiple runs so they can be treated as a single text, no matter how many runs the text
  * spans.
- * Call {@link #add(R, int)} to add all runs that should be aggregated. Then, call
- * methods to modify the aggregated text. Finally, call {@link #asString()} to get the modified text.
+ * Create a {@link StandardParagraph} then, call methods to modify the aggregated text.
+ * Finally, call {@link #asString()} to get the modified text.
  *
  * @author Joseph Verron
  * @author Tom Hombergs
@@ -29,69 +31,95 @@ import static java.util.stream.Collectors.joining;
 public class StandardParagraph
         implements Paragraph {
 
-    private final List<IndexedRun> runs = new ArrayList<>();
+    private static final Random RANDOM = new Random();
+    private final DocxPart source;
     private final List<Object> contents;
-    private final PPr paragraphPr;
-    private final P paragraph;
-    private int currentPosition = 0;
+    private final P p;
+    private List<IndexedRun> runs;
+
+    private StandardParagraph(DocxPart source, List<Object> paragraphContent, P p) {
+        this.source = source;
+        this.contents = paragraphContent;
+        this.p = p;
+        this.runs = initializeRunList(contents);
+    }
+
+
+    /**
+     * Calculates the runs of the paragraph.
+     * This method is called automatically by the constructor, but can also be
+     * called manually to recalculate the runs after a modification to the paragraph was done.
+     */
+    private static List<IndexedRun> initializeRunList(List<Object> objects) {
+        int currentLength = 0;
+        var runList = new ArrayList<IndexedRun>(objects.size());
+        for (int i = 0; i < objects.size(); i++) {
+            Object object = objects.get(i);
+            if (object instanceof R run) {
+                int nextLength = currentLength + RunUtil.getLength(run);
+                runList.add(new IndexedRun(currentLength, nextLength, i, run));
+                currentLength = nextLength;
+            }
+        }
+        return runList;
+    }
 
     /**
      * Constructs a new ParagraphWrapper for the given paragraph.
-     *
-     * @param paragraph the paragraph to wrap.
      */
-    public StandardParagraph(P paragraph) {
-        this.paragraph = paragraph;
-        this.contents = this.paragraph.getContent();
-        this.paragraphPr = paragraph.getPPr();
-        recalculateRuns();
+    public static StandardParagraph from(DocxPart source, P paragraph) {
+        return new StandardParagraph(source, paragraph.getContent(), paragraph);
     }
 
     /**
-     * Recalculates the runs of the paragraph. This method is called automatically by the constructor, but can also be
-     * called manually to recalculate the runs after a modification to the paragraph was done.
+     * Constructs a StandardParagraph from a given CTSdtContentRun paragraph.
+     *
+     * @param paragraph a CTSdtContentRun object representing the content run of the paragraph
+     *
+     * @return a new instance of StandardParagraph based on the provided CTSdtContentRun
      */
-    private void recalculateRuns() {
-        currentPosition = 0;
-        this.runs.clear();
-        add(0, contents);
+    public static StandardParagraph from(DocxPart source, CTSdtContentRun paragraph) {
+        var p = WmlFactory.newParagraph(paragraph.getContent());
+        p.setParent(paragraph.getParent());
+        return new StandardParagraph(source, paragraph.getContent(), p);
     }
 
-    private int add(int index, List<Object> objects) {
-        for (Object object : objects)
-            index = add(index, object);
-        return index;
+    @Override public ProcessorContext processorContext(Placeholder placeholder) {
+        var comment = comment(placeholder);
+        var firstRun = (R) contents.getFirst();
+        return new ProcessorContext(this, firstRun, comment, placeholder);
     }
 
-    private int add(int index, Object object) {
-        if (object instanceof R r)
-            return add(r, index);
-        else if (object instanceof SdtRun sdtRun)
-            return add(index, sdtRun);
-        else if (object instanceof JAXBElement<?> jaxbElement)
-            return add(index, jaxbElement.getValue());
-        else
-            return index + 1;
+    @Override public void replace(List<P> toRemove, List<P> toAdd) {
+        int index = siblings().indexOf(p);
+        if (index < 0) throw new OfficeStamperException("Impossible");
+        siblings().addAll(index, toAdd);
+        siblings().removeAll(toRemove);
     }
 
-    private int add(int index, SdtRun sdtRun) {
-        return add(index, sdtRun.getSdtContent());
+    private List<Object> siblings() {
+        return this.parent(ContentAccessor.class, 1)
+                   .orElseThrow(throwing("This paragraph direct parent is not a classic parent object"))
+                   .getContent();
     }
 
-    private int add(int index, SdtContent sdtContent) {
-        return this.add(index, sdtContent.getContent());
+    private <T> Optional<T> parent(Class<T> aClass, int depth) {
+        return getFirstParentWithClass(p, aClass, depth);
+    }
+
+    @Override public void remove() {
+        ObjectDeleter.deleteParagraph(p);
     }
 
     /**
-     * Adds a run to the aggregation.
+     * Retrieves the P object associated with this StandardParagraph.
      *
-     * @param run the run to add.
+     * @return the P object of this paragraph.
+     *
+     * @deprecated Not recommended, as will be replaced by other API
      */
-    private int add(R run, int index) {
-        int endPosition = currentPosition + RunUtil.getLength(run);
-        runs.add(new IndexedRun(currentPosition, endPosition, index, run));
-        currentPosition = endPosition;
-        return index + 1;
+    @Deprecated(since = "2.6", forRemoval = true) @Override public P getP() {
+        return p;
     }
 
     /**
@@ -102,8 +130,7 @@ public class StandardParagraph
      * @param placeholder the expression to be replaced.
      * @param replacement the object to replace the expression.
      */
-    @Override
-    public void replace(Placeholder placeholder, Object replacement) {
+    @Override public void replace(Placeholder placeholder, Object replacement) {
         if (replacement instanceof R run) {
             replaceWithRun(placeholder, run);
         }
@@ -111,7 +138,7 @@ public class StandardParagraph
             replaceWithBr(placeholder, br);
         }
         else {
-            throw new AssertionError("replacement must be a R");
+            throw new AssertionError("Replacement must be a R or Br, but was a " + replacement.getClass());
         }
     }
 
@@ -120,12 +147,23 @@ public class StandardParagraph
      *
      * @return the text of all runs.
      */
-    @Override
-    public String asString() {
+    @Override public String asString() {
         return runs.stream()
                    .map(IndexedRun::run)
                    .map(RunUtil::getText)
                    .collect(joining());
+    }
+
+    @Override public void apply(Consumer<P> pConsumer) {
+        pConsumer.accept(p);
+    }
+
+    @Override public <T> Optional<T> parent(Class<T> aClass) {
+        return parent(aClass, Integer.MAX_VALUE);
+    }
+
+    @Override public Optional<Comments.Comment> getComment() {
+        return CommentUtil.getCommentFor(contents, source.document());
     }
 
     private void replaceWithRun(Placeholder placeholder, R replacement) {
@@ -143,7 +181,7 @@ public class StandardParagraph
         boolean singleRun = affectedRuns.size() == 1;
 
         if (singleRun) {
-            IndexedRun run = affectedRuns.get(0);
+            IndexedRun run = affectedRuns.getFirst();
 
             boolean expressionSpansCompleteRun = full.length() == run.length();
             boolean expressionAtStartOfRun = matchStartIndex == run.startIndex();
@@ -153,95 +191,49 @@ public class StandardParagraph
             replacement.setRPr(run.getPr());
 
             if (expressionSpansCompleteRun) {
-                contents.remove(run.run());
-                contents.add(run.indexInParent(), replacement);
-                recalculateRuns();
+                contents.set(run.indexInParent(), replacement);
             }
             else if (expressionAtStartOfRun) {
                 run.replace(matchStartIndex, matchEndIndex, "");
                 contents.add(run.indexInParent(), replacement);
-                recalculateRuns();
             }
             else if (expressionAtEndOfRun) {
                 run.replace(matchStartIndex, matchEndIndex, "");
                 contents.add(run.indexInParent() + 1, replacement);
-                recalculateRuns();
             }
             else if (expressionWithinRun) {
                 int startIndex = run.indexOf(full);
                 int endIndex = startIndex + full.length();
-                R run1 = RunUtil.create(run.substring(0, startIndex), paragraphPr);
-                R run2 = RunUtil.create(run.substring(endIndex), paragraphPr);
-                contents.add(run.indexInParent(), run2);
-                contents.add(run.indexInParent(), replacement);
-                contents.add(run.indexInParent(), run1);
-                contents.remove(run.run());
-                recalculateRuns();
+                var newStartRun = RunUtil.create(run.substring(0, startIndex),
+                        run.run()
+                           .getRPr());
+                var newEndRun = RunUtil.create(run.substring(endIndex),
+                        run.run()
+                           .getRPr());
+                contents.remove(run.indexInParent());
+                contents.addAll(run.indexInParent(), List.of(newStartRun, replacement, newEndRun));
             }
         }
         else {
-            IndexedRun firstRun = affectedRuns.get(0);
-            IndexedRun lastRun = affectedRuns.get(affectedRuns.size() - 1);
-            List<Object> firstRunSiblings;
+            IndexedRun firstRun = affectedRuns.getFirst();
+            IndexedRun lastRun = affectedRuns.getLast();
             replacement.setRPr(firstRun.getPr());
             removeExpression(firstRun, matchStartIndex, matchEndIndex, lastRun, affectedRuns);
-            firstRunSiblings = firstRun.isIn(paragraph)
-                    ? this.contents
-                    : firstRun.parent()
-                              .getContent();
             // add replacement run between first and last run
-            firstRunSiblings.add(firstRun.indexInParent() + 1, replacement);
-            recalculateRuns();
+            contents.add(firstRun.indexInParent() + 1, replacement);
         }
-    }
-
-    private void removeExpression(
-            IndexedRun firstRun,
-            int matchStartIndex,
-            int matchEndIndex,
-            IndexedRun lastRun,
-            List<IndexedRun> affectedRuns
-    ) {
-        // remove the expression from first run
-        firstRun.replace(matchStartIndex, matchEndIndex, "");
-        // remove all runs between first and last
-        for (IndexedRun run : affectedRuns) {
-            if (!Objects.equals(run, firstRun)
-                && !Objects.equals(run, lastRun)) {
-                contents.remove(run.run());
-            }
-        }
-        // remove the expression from last run
-        lastRun.replace(matchStartIndex, matchEndIndex, "");
+        this.runs = initializeRunList(contents);
     }
 
     private void replaceWithBr(Placeholder placeholder, Br br) {
         for (IndexedRun indexedRun : runs) {
-            var run = indexedRun.run();
-            var content = run.getContent();
-            var iterator = content.listIterator();
-            while (iterator.hasNext()) {
-                Object element = iterator.next();
-                if (element instanceof JAXBElement<?> jaxbElement) {
-                    element = jaxbElement.getValue();
-                }
-                if (element instanceof Text text) {
-                    var value = text.getValue();
-                    if (value.contains(placeholder.expression())) {
-                        iterator.remove();
-                        var iterator1 = Arrays.stream(value.split(placeholder.expression()))
-
-                                              .iterator();
-                        while (iterator1.hasNext()) {
-                            var next = iterator1.next();
-                            var text1 = new Text();
-                            text1.setValue(next);
-                            iterator.add(text1);
-                            if (iterator1.hasNext())
-                                iterator.add(br);
-                        }
-                    }
-                }
+            var runContentIterator = indexedRun.run()
+                                               .getContent()
+                                               .listIterator();
+            while (runContentIterator.hasNext()) {
+                Object element = runContentIterator.next();
+                if (element instanceof JAXBElement<?> jaxbElement) element = jaxbElement.getValue();
+                if (element instanceof Text text) replaceWithBr(placeholder, br, text, runContentIterator);
             }
         }
     }
@@ -252,11 +244,47 @@ public class StandardParagraph
                    .toList();
     }
 
+    private void removeExpression(
+            IndexedRun firstRun,
+            int matchStartIndex,
+            int matchEndIndex,
+            IndexedRun lastRun,
+            List<IndexedRun> affectedRuns
+    ) {
+        // remove the expression from the first run
+        firstRun.replace(matchStartIndex, matchEndIndex, "");
+        // remove all runs between first and last
+        for (IndexedRun run : affectedRuns) {
+            if (!Objects.equals(run, firstRun) && !Objects.equals(run, lastRun)) {
+                contents.remove(run.run());
+            }
+        }
+        // remove the expression from the last run
+        lastRun.replace(matchStartIndex, matchEndIndex, "");
+    }
+
+    private static void replaceWithBr(
+            Placeholder placeholder, Br br, Text text, ListIterator<Object> runContentIterator
+    ) {
+        var value = text.getValue();
+        runContentIterator.remove();
+        var runLinebreakIterator = stream(value.split(placeholder.expression())).iterator();
+        while (runLinebreakIterator.hasNext()) {
+            var subText = WmlFactory.newText(runLinebreakIterator.next());
+            runContentIterator.add(subText);
+            if (runLinebreakIterator.hasNext()) runContentIterator.add(br);
+        }
+    }
+
+    private Comment comment(Placeholder placeholder) {
+        var id = new BigInteger(16, RANDOM);
+        return StandardComment.create(source.document(), p, placeholder, id);
+    }
+
     /**
      * {@inheritDoc}
      */
-    @Override
-    public String toString() {
+    @Override public String toString() {
         return asString();
     }
 
